//! RPC client for cluster management operations
//!
//! Provides a high-level client for communicating with Chronik cluster nodes

use anyhow::{anyhow, Result};
use std::time::Duration;

use super::cluster::{
    ClusterStatus, HealthCheck, IsrStatus, MetadataStatus, NodeHealth, NodeInfo, NodeStatus,
    PartitionInfo, PartitionMove, PingResult, RebalancePlan,
};

/// Client for cluster management operations
pub struct ClusterClient {
    /// Server address
    addr: String,
    /// Connection timeout
    timeout: Duration,
}

impl ClusterClient {
    /// Connect to a Chronik cluster node
    pub async fn connect(addr: &str) -> Result<Self> {
        // IMPORTANT: This is a mock implementation for development/testing only
        eprintln!("╔═══════════════════════════════════════════════════════════════════════╗");
        eprintln!("║  ⚠️  WARNING: Cluster CLI Returns MOCK DATA Only                      ║");
        eprintln!("╠═══════════════════════════════════════════════════════════════════════╣");
        eprintln!("║  This cluster management CLI is a stub implementation that returns    ║");
        eprintln!("║  hardcoded mock data. It does NOT connect to a real cluster.         ║");
        eprintln!("║                                                                       ║");
        eprintln!("║  For actual cluster management, use Kafka protocol tools:            ║");
        eprintln!("║    • kafka-topics --bootstrap-server localhost:9092 --list           ║");
        eprintln!("║    • kafka-topics --describe --topic <name>                          ║");
        eprintln!("║    • kafka-consumer-groups --list                                    ║");
        eprintln!("║                                                                       ║");
        eprintln!("║  This feature is planned for implementation in a future release.    ║");
        eprintln!("╚═══════════════════════════════════════════════════════════════════════╝");
        eprintln!();

        // For now, just store the address
        // TODO: Phase 5 - Implement actual gRPC connection and admin API
        Ok(Self {
            addr: addr.to_string(),
            timeout: Duration::from_secs(10),
        })
    }

    /// Get cluster status
    pub async fn get_cluster_status(&self, detailed: bool) -> Result<ClusterStatus> {
        // Mock implementation - Phase 5 will implement actual gRPC calls
        Ok(ClusterStatus {
            total_nodes: 3,
            healthy_nodes: 3,
            unhealthy_nodes: 0,
            metadata_leader: Some(1),
            nodes: vec![
                NodeInfo {
                    id: 1,
                    address: "192.168.1.10:9092".to_string(),
                    raft_port: 5001,
                    status: NodeStatus::Healthy,
                    partition_count: 12,
                },
                NodeInfo {
                    id: 2,
                    address: "192.168.1.11:9092".to_string(),
                    raft_port: 5001,
                    status: NodeStatus::Healthy,
                    partition_count: 12,
                },
                NodeInfo {
                    id: 3,
                    address: "192.168.1.12:9092".to_string(),
                    raft_port: 5001,
                    status: NodeStatus::Healthy,
                    partition_count: 12,
                },
            ],
        })
    }

    /// Add a new node to the cluster
    pub async fn add_node(&self, id: u64, addr: &str, raft_port: u16) -> Result<String> {
        // Mock implementation
        Ok(format!(
            "Node {} added at {}:{}",
            id, addr, raft_port
        ))
    }

    /// Remove a node from the cluster
    pub async fn remove_node(&self, id: u64, force: bool) -> Result<String> {
        // Mock implementation
        Ok(format!("Node {} removed (force: {})", id, force))
    }

    /// List all nodes in the cluster
    pub async fn list_nodes(&self) -> Result<Vec<NodeInfo>> {
        // Mock implementation
        Ok(vec![
            NodeInfo {
                id: 1,
                address: "192.168.1.10:9092".to_string(),
                raft_port: 5001,
                status: NodeStatus::Healthy,
                partition_count: 12,
            },
            NodeInfo {
                id: 2,
                address: "192.168.1.11:9092".to_string(),
                raft_port: 5001,
                status: NodeStatus::Healthy,
                partition_count: 12,
            },
            NodeInfo {
                id: 3,
                address: "192.168.1.12:9092".to_string(),
                raft_port: 5001,
                status: NodeStatus::Healthy,
                partition_count: 12,
            },
        ])
    }

    /// List partitions
    pub async fn list_partitions(
        &self,
        topic: Option<&str>,
        node: Option<u64>,
    ) -> Result<Vec<PartitionInfo>> {
        // Mock implementation
        Ok(vec![
            PartitionInfo {
                topic: "my-topic".to_string(),
                partition: 0,
                leader: Some(1),
                replicas: vec![1, 2, 3],
                isr: vec![1, 2, 3],
                applied_index: 15023,
                committed_index: 15023,
                lag: 0,
            },
            PartitionInfo {
                topic: "my-topic".to_string(),
                partition: 1,
                leader: Some(2),
                replicas: vec![2, 3, 1],
                isr: vec![2, 3, 1],
                applied_index: 14891,
                committed_index: 14891,
                lag: 0,
            },
        ])
    }

    /// Get partition information
    pub async fn get_partition_info(&self, topic: &str, partition: i32) -> Result<PartitionInfo> {
        // Mock implementation
        Ok(PartitionInfo {
            topic: topic.to_string(),
            partition,
            leader: Some(1),
            replicas: vec![1, 2, 3],
            isr: vec![1, 2, 3],
            applied_index: 15023,
            committed_index: 15023,
            lag: 0,
        })
    }

    /// Rebalance partitions
    pub async fn rebalance(
        &self,
        dry_run: bool,
        max_moves: u32,
        topic: Option<&str>,
    ) -> Result<RebalancePlan> {
        // Mock implementation
        Ok(RebalancePlan {
            current_imbalance: 0.18,
            partitions_to_move: 3,
            moves: vec![
                PartitionMove {
                    topic: "my-topic".to_string(),
                    partition: 2,
                    from_node: 1,
                    to_node: 3,
                },
                PartitionMove {
                    topic: "other-topic".to_string(),
                    partition: 5,
                    from_node: 1,
                    to_node: 2,
                },
                PartitionMove {
                    topic: "test-topic".to_string(),
                    partition: 0,
                    from_node: 2,
                    to_node: 3,
                },
            ],
            estimated_duration_secs: 150,
        })
    }

    /// Get ISR status
    pub async fn get_isr_status(
        &self,
        topic: Option<&str>,
        under_replicated_only: bool,
    ) -> Result<Vec<IsrStatus>> {
        // Mock implementation
        Ok(vec![
            IsrStatus {
                topic: "my-topic".to_string(),
                partition: 0,
                leader: Some(1),
                isr: vec![1, 2, 3],
                replicas: vec![1, 2, 3],
                is_under_replicated: false,
            },
            IsrStatus {
                topic: "test-topic".to_string(),
                partition: 1,
                leader: Some(2),
                isr: vec![2],
                replicas: vec![2, 3, 4],
                is_under_replicated: true,
            },
        ])
    }

    /// Get metadata status
    pub async fn get_metadata_status(&self, detailed: bool) -> Result<MetadataStatus> {
        // Mock implementation
        Ok(MetadataStatus {
            leader_node: Some(1),
            total_entries: 1523,
            applied_index: 1523,
            committed_index: 1523,
            last_updated: "2025-10-16T14:32:10Z".to_string(),
        })
    }

    /// Replicate metadata
    pub async fn replicate_metadata(&self, key: &str, value: &str) -> Result<String> {
        // Mock implementation
        Ok(format!(
            "Metadata replicated: key={}, value={}",
            key, value
        ))
    }

    /// Check cluster health
    pub async fn check_health(&self, timeout_secs: u64) -> Result<HealthCheck> {
        // Mock implementation
        Ok(HealthCheck {
            cluster_healthy: true,
            nodes: vec![
                NodeHealth {
                    id: 1,
                    address: "192.168.1.10:9092".to_string(),
                    is_alive: true,
                    response_time_ms: 5,
                },
                NodeHealth {
                    id: 2,
                    address: "192.168.1.11:9092".to_string(),
                    is_alive: true,
                    response_time_ms: 7,
                },
                NodeHealth {
                    id: 3,
                    address: "192.168.1.12:9092".to_string(),
                    is_alive: true,
                    response_time_ms: 6,
                },
            ],
            issues: vec![],
        })
    }

    /// Ping a specific node
    pub async fn ping_node(&self, id: u64, count: u32) -> Result<PingResult> {
        // Mock implementation
        Ok(PingResult {
            node_id: id,
            address: format!("192.168.1.{}:9092", 10 + id - 1),
            successful_pings: count,
            failed_pings: 0,
            avg_response_time_ms: 5,
        })
    }

    /// Set connection timeout
    pub fn with_timeout(mut self, timeout: Duration) -> Self {
        self.timeout = timeout;
        self
    }

    /// Get the server address
    pub fn addr(&self) -> &str {
        &self.addr
    }
}

#[cfg(test)]
mod tests {
    use super::*;

    #[tokio::test]
    async fn test_connect() {
        let client = ClusterClient::connect("http://localhost:5001").await;
        assert!(client.is_ok());

        let client = client.unwrap();
        assert_eq!(client.addr(), "http://localhost:5001");
    }

    #[tokio::test]
    async fn test_get_cluster_status() {
        let client = ClusterClient::connect("http://localhost:5001")
            .await
            .unwrap();

        let status = client.get_cluster_status(false).await;
        assert!(status.is_ok());

        let status = status.unwrap();
        assert_eq!(status.total_nodes, 3);
        assert_eq!(status.healthy_nodes, 3);
    }

    #[tokio::test]
    async fn test_list_nodes() {
        let client = ClusterClient::connect("http://localhost:5001")
            .await
            .unwrap();

        let nodes = client.list_nodes().await;
        assert!(nodes.is_ok());

        let nodes = nodes.unwrap();
        assert_eq!(nodes.len(), 3);
        assert_eq!(nodes[0].id, 1);
    }

    #[tokio::test]
    async fn test_add_node() {
        let client = ClusterClient::connect("http://localhost:5001")
            .await
            .unwrap();

        let result = client.add_node(4, "192.168.1.40:9092", 5001).await;
        assert!(result.is_ok());
    }

    #[tokio::test]
    async fn test_rebalance() {
        let client = ClusterClient::connect("http://localhost:5001")
            .await
            .unwrap();

        let plan = client.rebalance(true, 10, None).await;
        assert!(plan.is_ok());

        let plan = plan.unwrap();
        assert_eq!(plan.partitions_to_move, 3);
    }

    #[tokio::test]
    async fn test_health_check() {
        let client = ClusterClient::connect("http://localhost:5001")
            .await
            .unwrap();

        let health = client.check_health(5).await;
        assert!(health.is_ok());

        let health = health.unwrap();
        assert!(health.cluster_healthy);
        assert_eq!(health.nodes.len(), 3);
    }

    #[tokio::test]
    async fn test_ping_node() {
        let client = ClusterClient::connect("http://localhost:5001")
            .await
            .unwrap();

        let result = client.ping_node(1, 5).await;
        assert!(result.is_ok());

        let result = result.unwrap();
        assert_eq!(result.node_id, 1);
        assert_eq!(result.successful_pings, 5);
    }

    #[tokio::test]
    async fn test_with_timeout() {
        let client = ClusterClient::connect("http://localhost:5001")
            .await
            .unwrap()
            .with_timeout(Duration::from_secs(30));

        assert_eq!(client.timeout, Duration::from_secs(30));
    }
}
